<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">货比三家</string>
    <string name="myFocus">我的关注</string>
    <string name="allGoodsType">全部商品类型</string>
    <string name="systemSettings">系统设置</string>
    <string name="imgContentDescript">图片说明</string>
    <string name="add">添加</string>
    <string name="refresh">刷新</string>
    <string name="more">更多</string>
    <string name="close">关闭</string>
    <string name="exit">退出</string>
    <string name="home">主页</string>
    <string name="back">返回</string>
    <string name="focus">关注</string>
    <string name="success">成功</string>
    <string name="failure">失败</string>
    <string name="delete">删除</string>
    <string name="settings">设置</string>
    <string name="contactUs">联系我们</string>
    <string name="about">关于</string>
    <string name="enablePriceReducedNotify">开启降价通知</string>
    <string name="search">搜索</string>
    <string name="other">其它</string>
    <string name="inputTheGoodsName">请输入商品名搜索</string>
    <string name="aboutDescript">\t\t《货比三家》原意是为大家提供一个实时监控商品价格走势的软件，在商品的价格下降或者上升时及时通知用户，同时在后期的2.0版本将会提供一个商品在三大网店（淘宝、京东、易讯）的价格对比功能，希望大家在用《货比三家》的时候提出更多宝贵的意见，帮助我把这个软件做得更适合你使用。谢谢。</string>
    <string name="help">帮助</string>
    <string name="contactUsDetail">QQ：52963645 \n E-Mail:52963645@qq.com</string>
    <string name="version">V1.0 Beta版</string>
    <string name="introduce">商品简介</string>
    <string name="helpDetail">
        <![CDATA[
            \t《货比三家》原意是为大家提供一个实时监控商品价格走势的软件，在商品的价格下降或者上升时及时通知用户，
            同时在后期的2.0版本将会提供一个商品在三大网店（淘宝、京东、易讯）的价格对比功能，当前版本只支持淘宝商品的操作，由于当前是第一个测试版本，
            如有BUG请大家多多联系我，期待你们宝贵的建议，帮助我把这个软件做得更适合你使用，谢谢。\n
            \t软件刚安装的时候“我的关注”页面列表是空的，因为我们还没有对商品进行关注,所以首先要对商品进行关注,然后就可以对列表中的商品
            进行监控和删除。\n
            \t1）添加关注\n
                    添加关注有两种方式，第一种方式：“我的关注”页面-->点击“其它”按钮-->弹出框中点击“添加”按钮，然后在弹出的“商品类型”页面中选择
                    自己感兴趣的商品类型，然后在商品列表中选择点击“关注”按钮即可进行商品的关注，也可以点击商品列表的某一项进入商品详细页面，在最顶状态
                    栏右边点击“关注”。第二种方式：“我的关注”页面-->点击“其它”按钮-->弹出框中点击“搜索”按钮，然后在搜索框中输入商品名进行搜索，接着
                    软件就会搜索出相应的商品列表，后面的操作就同第一种方法一样了。\n
             \t1）删除关注\n
                    在“我的关注”页面中，手指在要删除关注的商品向左滑动就可以看到一个垃圾桶的图标，点击这个图标就可以对关注的商品进行删除。\n
             \t1）降价通知\n
                    “我的关注”页面-->点击“其它”按钮-->弹出框中点击“设置”按钮，在弹出的窗口中对“开启降价通知”勾选中即可，这样当商品的价格有变动的
                    时候，软件会在手机最顶的状态栏上进行通知。
        ]]>
    </string>

</resources>
