<?xml version="1.0" encoding="utf-8"?>
<!-- 商品详细页面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/goods_type_bg"
    tools:context=".GoodsDeailActivity" >

    <!-- 工具条 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/toolbar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/btBack"
            style="@style/cornersButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/back_icon"
            android:drawablePadding="5dp"
            android:onClick="onBtBackClick"
            android:text="@string/back" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:text="@string/contactUs"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            style="@style/cornersButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/add_icon"
            android:text="@string/focus"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/launcher_icon"
            android:contentDescription="@string/imgContentDescript"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeffee"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:padding="18dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff9784cb"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="@style/settings_container"
            android:text="\t\t在开始页面中，按其它按钮->添加，然后选择相关的商品类型进行浏览感兴趣的商品，然后在商品列表中点击关注按钮即可对商品进行关注。也可以通过点击主页的其它按钮->搜索进行商品的搜索，然后在商品列表中点击关注按钮即可对商品进行关注。" />
    </LinearLayout>

</LinearLayout>