<?xml version="1.0" encoding="utf-8"?>
<!-- 商品详细页面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/goods_type_bg"
    tools:context=".GoodsDeailActivity" >

    <!-- 工具条 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/toolbar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/btBack"
            style="@style/cornersButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/back_icon"
            android:drawablePadding="5dp"
            android:onClick="onBtBackClick"
            android:text="@string/back" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:text="@string/about"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            style="@style/cornersButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/add_icon"
            android:text="@string/focus" 
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeffee"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="　　货比三家的软件可以制作完成，需要感谢帮助过开发这个软件的朋友，特别是梁能奇、陈梓新、陈欢的技术指导和需求的整理，在这表示感谢。" />
    </LinearLayout>

</LinearLayout>